--- a/src/app/features/user-box/user-box.component.html
+++ b/src/app/features/user-box/user-box.component.html
@@ -4,4 +4,6 @@
   <p>Usuario: {{ usuario.username }} </p>
   <p>Edad: {{ usuario.age }} </p>
   <img [src]="usuario.urlPhoto" width="300">
+  <hr>
+  <button class="button">Votar</button>
 </div>
