--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>
-  {{title}}
-</h1>
-<app-nuevo></app-nuevo>
+<header>
+  <a routerLink="login">Iniciar sesión</a>
+  <a (click)="logout()">Cerrar sesión</a>
+</header>
+<nav>
+  <a routerLink="">Inicio</a>
+  <a routerLink="users">Usuarios</a>
+</nav>
+<!--<app-nuevo></app-nuevo>-->
+<router-outlet></router-outlet>
